--- a/src/app/scene/home/employee/employee-detail/employee-detail.component.html
+++ b/src/app/scene/home/employee/employee-detail/employee-detail.component.html
@@ -9,7 +9,7 @@
             class="btn btn-tool pull-right"
           >
             <i class="fas fa-times" style="color: black"></i>
-          </button>chart-responsive
+          </button>
           <br />
           <div class="row">
             <div class="col-md-6">
