--- a/src/app/scene/home/employee/employee-list/employee-list.component.html
+++ b/src/app/scene/home/employee/employee-list/employee-list.component.html
@@ -58,7 +58,7 @@
                 <th style="color: #f88538">Details</th>
 
                 <th style="color: #f88538">Delete</th>
-                <th style="color: #f88538">Enable</th>
+                <th style="color: #f88538">Enable<br>Disable</th>
                 <!---- <th style="color: #f88538;">Add Photo </th>-->
               </tr>
             </thead>
